--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["@babel/transform-runtime", "@babel/syntax-jsx"]
+  "plugins": ["@babel/transform-runtime"]
 }
