--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@actualwave/use-signalr",
   "version": "1.0.0",
   "description": "React hooks for @microsoft/signalr library inspired by @apollo/client",
-  "main": "index.js",
+  "main": "bundle.js",
   "type": "module",
   "scripts": {
+    "build": "npx rollup --config rollup.config.js",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
@@ -16,6 +17,10 @@
     "react",
     "hook",
     "realtime",
+    "azure",
+    "websocket",
+    "client",
+    "microsoft",
     "signalr",
     "api",
     "communication"
@@ -32,13 +37,15 @@
     "react": "^16.8.0"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-jsx": "^7.16.7",
     "@babel/plugin-transform-runtime": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
     "babel-jest": "^27.4.6",
-    "jest": "^27.4.5"
+    "jest": "^27.4.5",
+    "rollup": "^2.63.0"
   }
 }
